--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,9 @@
   --primary-200: #fffefe;
   --primary-300: #f1f6fe;
   --primary-400: #dee5f0;
+  --primary-500: #cfd8e9;
+  --primary-600: #f1f7ff;
+  --primary-text: #021530;
   --secondary-100: #473aa0;
   --secondary-200: #3b3187;
   --tertiary-100: #057bfe;
@@ -25,6 +28,8 @@
   --primary-300: #2f2f35;
   --primary-400: #4d4d4d;
   --primary-500: #000000;
+  --primary-600: #191921;
+  --primary-text: #cfd8e9;
   --secondary-100: #bf94f8;
   --secondary-200: #aa73f7;
   --secondary-300: #8f4ff6;
@@ -35,4 +40,18 @@
   --tertiary-300: #ff3fb1;
   --tertiary-400: #ff1da7;
   --tertiary-500: #ff009c;
+}
+
+:root.light .active {
+  background-color: var(--primary-100);
+  color: #cfd8e9;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
+:root.dark .active {
+  background-color: var(--primary-100);
+  color: var(--primary-text);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
 }
