--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,7 @@
   --primary-500: #cfd8e9;
   --primary-600: #f1f7ff;
   --primary-text: #021530;
+  --primary-text-100: #cfd8e9;
   --secondary-100: #473aa0;
   --secondary-200: #3b3187;
   --tertiary-100: #057bfe;
@@ -30,6 +31,7 @@
   --primary-500: #000000;
   --primary-600: #191921;
   --primary-text: #cfd8e9;
+  --primary-text-100: #cfd8e9;
   --secondary-100: #bf94f8;
   --secondary-200: #aa73f7;
   --secondary-300: #8f4ff6;
