--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,7 +30,7 @@
   --primary-400: #4d4d4d;
   --primary-500: #000000;
   --primary-600: #191921;
-  --primary-text: #cfd8e9;
+  --primary-text: #fffefe;
   --primary-text-100: #cfd8e9;
   --secondary-100: #bf94f8;
   --secondary-200: #aa73f7;
@@ -56,4 +56,13 @@
   color: var(--primary-text);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
+}
+
+@keyframes fadeOut {
+  from {
+    transform: scale(0.8);
+  }
+  to {
+    transform: scale(1);
+  }
 }
