--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,7 @@
 }
 
 :root.dark {
-  --btn-100: #301c27;
+  --btn-100: #1b1619;
   --primary-100: #414459;
   --primary-200: #262835;
   --primary-300: #2f2f35;
