--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@
   --primary-400: #dee5f0;
   --primary-500: #cfd8e9;
   --primary-600: #f1f7ff;
+  --primary-700: #e6edff;
   --primary-text: #021530;
   --primary-text-100: #cfd8e9;
   --secondary-100: #473aa0;
@@ -32,6 +33,7 @@
   --primary-400: #4d4d4d;
   --primary-500: #000000;
   --primary-600: #191921;
+  --primary-700: #111116;
   --primary-text: #fffefe;
   --primary-text-100: #cfd8e9;
   --secondary-100: #bf94f8;
